feat: launch tests against Firestore emulator running in Docker

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
   "recommendations": [
     "dbaeumer.vscode-eslint",
-    "firsttris.vscode-jest-runner"
+    "firsttris.vscode-jest-runner",
+    "ms-azuretools.vscode-containers",
+    "ms-azuretools.vscode-docker"
   ]
 }
