--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "check": "tsc -p tsconfig.test.json --noEmit",
-    "test": "jest",
+    "test": "jest --runInBand",
     "lint": "eslint . --ext .ts,.cjs"
   },
   "keywords": [
